# hubsson-frontend-meetup

./: README.md  next.config.js  package-lock.json  package.json
components/Dijkstra/: dijkstra.js  index.jsx
components/SideNav/: index.jsx
libs/wasm-dijkstra/: Cargo.toml
libs/wasm-dijkstra/src/: dijkstra.rs  lib.rs
pages/: index.jsx
styles/: globals.css
