[package]
name = "dijkstra-wasm"
version = "0.1.0"
authors = ["Migel Hoxha <migelhoxha@aol.com>"]
edition = "2021"

[lib]
# dynamic system library will be produced. This is used when compiling a dynamic library to be loaded from another language
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features=["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize code.
opt-level=3
lto = true
